--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(joebidenchair.jpg);
+  background-image: url(/imgs/joebidenchair.jpg);
   background-repeat: no-repeat;
   background-size: 120% 145%;
   background-position: center;
@@ -49,9 +49,10 @@ h1 {
   font-style: normal;
   text-align: center;
   color: white;
-  margin-top: 500px;
+  margin-top: 450px;
   animation-duration: 3s;
   animation-name: slide-in;
+  text-shadow: 3px 2px 5px rgb(65, 22, 255);
 }
 h4 {
   margin-top: 260px;
@@ -59,7 +60,7 @@ h4 {
   font-family: "samantha-upright", sans-serif;
   font-weight: 200px;
   font-style: normal;
-  font-size: 100px;
+  font-size: 70px;
   text-shadow: 3px 2px 5px rgb(65, 22, 255);
   transform: scale(0.94);
   animation: scale 5s forwards cubic-bezier(0.5, 1, 0.89, 1);
