--- a/style2.css
+++ b/style2.css
@@ -3,3 +3,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.card {
+  margin-top: 600px;
+}
+h1 {
+  margin-top: 200px;
+  text-align: center;
+}
