finished styling the pages have to do timeline and make it better

--- a/style3.css
+++ b/style3.css
@@ -1,10 +1,7 @@
 body {
-  background-image: url(/imgs/joebidenearlylife.webp);
+  background: url(imgs/joebidenforpresident.webp);
   background-repeat: no-repeat;
-  background-size: cover;
-}
-.card {
-  margin-top: 300px;
+  background-size: 100%;
 }
 h1 {
   margin-top: 200px;
