--- a/style2.css
+++ b/style2.css
@@ -4,12 +4,22 @@ body {
   background-size: cover;
 }
 .card {
-  margin-top: 300px;
+  margin-top: 200px;
+  margin-left: 90px;
+  margin-right: 90px;
 }
 h1 {
-  margin-top: 200px;
+  margin-top: 150px;
   text-align: center;
-  font-family: "macho", sans-serif;
+  font-family: "samantha-upright", sans-serif;
   font-weight: 400;
   font-style: normal;
+  text-shadow: 2px 2px 2px#ffffff;
+  font-size: 100px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
