--- a/style3.css
+++ b/style3.css
@@ -1,12 +1,26 @@
 body {
-  background: url(imgs/joebidenforpresident.webp);
+  background: url(imgs/whitehouse.webp);
   background-repeat: no-repeat;
   background-size: 100%;
 }
 h1 {
   margin-top: 200px;
   text-align: center;
-  font-family: "macho", sans-serif;
+  font-family: "samantha-upright", sans-serif;
   font-weight: 400;
   font-style: normal;
+  text-shadow: 2px 2px 2px#ffffff;
+  font-size: 150px;
+  color: #1a73e8;
+}
+.card-img-top {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.card {
+  margin-top: 100px;
+  margin-left: 90px;
+  margin-right: 90px;
 }
