--- a/style3.css
+++ b/style3.css
@@ -25,7 +25,7 @@ h1 {
   margin-right: 90px;
 }
 #popup {
-  position: fixed;
+  position: sticky;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -38,6 +38,7 @@ h1 {
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  margin-top: 300px;
 }
 .popup {
   display: none;
