--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/imgs/joebidenchair.jpg);
+  background-image: url(imgs/joebidenchair.jpg);
   background-repeat: no-repeat;
   background-size: 120% 145%;
   background-position: center;
