--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/imgs/joebidenearlylife.webp);
+  background-image: url(imgs/joebidenearlylife.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
