--- a/style4.css
+++ b/style4.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/imgs/fireworks.jpg);
+  background-image: url(imgs/fireworks.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
